discord_themes/addons/alky_CV_BetterAccentContrast.css
  /**
 * @description This is intended to be an add-on for ClearVision themes with very
 * bright --main-color, with the goal being to improve the contrast of text against
 * a --main-color background. I would recommend against using it since it's mainly
 * for personal use and therefore very poorly documented. However, feel free to use
 * it, especially if you think it may improve the look if your theme.
 */

/*
:root{

  optional section of code. If you don't use this, then these variables must be
  defined in root element

  --main-color-inverted:; this should contain the inverted version of your accent color
}
*/

.lookFilled-yCfaCM.colorGrey-2iAG-B,
.lookFilled-yCfaCM.colorBrand-I6CyqQ,
.lookFilled-yCfaCM.colorGreen-3y-Z79,
.lookFilled-yCfaCM.colorBrandNew-g5lmBU,
.lookFilled-yCfaCM.colorBrandNew-2-gGsS,
.lookFilled-yCfaCM.colorPrimary-2AuQVo,
.buttonColor-1u-3JF,

.theme-dark .pageButton-1GMGeJ.activeButton-LRWFC_,
/* generic sticker selected in sticker picker*/
.stickerCategoryGenericSelected-DnO2K8,
/* buttons */
.lookFilled-yCfaCM.colorRed-rQXKgM,
button[class*="lookFilled-"][class*="colorGrey-"],
button[class*="lookFilled-"][class*="colorBrand-"],
button[class*="lookFilled-"][class*="colorGreen-"],
.lookFilled-yCfaCM.colorBrandNew-2-gGsS,
.lookFilled-yCfaCM.colorPrimary-2AuQVo,
/* new message bar in chat box */
#---new-messages-bar .unreadPill-3nEWYM,
[class^="newMessagesBar-"] button,
/* search bar */
.search-2Mwzzq .searchFilter-2UfsDk,
.search-2Mwzzq .searchAnswer-23w-CH,
/* search box*/
#uid_33--1 > [class^="queryText-"],
#uid_33--1 > [class^="queryText-"] strong,
/* unread channel bar */
.mention-3XBnnZ, 
.bar-2eAyLE.unread-2wipsx,
/* text selection */
::selection,
/* thingies when selecting options (like in create new channel modal) */
[class^="item-"][aria-checked="true"] > [class^="radioBar-"] circle[class^="radioIconForeground"],
[class^="item-"][aria-checked="true"] > [class^="radioBar-"] [class*="defaultColor-"],
/* number and text badges */
.numberBadge-37OJ3S,
.textBadge-1fdDPJ,
/* BetterDiscord text buttons*/
.bd-button,
/* hovering on text options (e.g. dark theme option in appearance settings)*/
.item-2idW98:hover,
/* "new" bar in server bar*/
.unreadMentionsIndicatorTop-2bTgUU div span,
/*hover upon options with colored text*/
.colorDefault-CDqZdO.focused-3qFvc8 .subtext-2GlkbE,
/*dumb check boxes*/
.item-1OdjEX.focused-3qFvc8 .checkbox-hADx5o,
.colorDefault-CDqZdO .check-3HZJs4,
/*clicking on context menu options and maybe more options*/
.menu-1QACrS .item-1OdjEX.colorDefault-CDqZdO:active:not(.hideInteraction-2jPGL_),
/*hover on server*/
.wrapper-3kah-n:hover .childWrapper-1j_1ub,
/*text buttons in gif sticker emoji (and add reaction)*/
.navButtonActive-1EqC5l,
.navButtonActive-1EqC5l:hover,
/*switch accounts context menu item on hover*/
.focused-3RdCfX .userMenuUsername-2xdVcJ .userMenuDiscriminator-2Vj2p9,
.focused-3RdCfX .userMenuUsername-2xdVcJ .userMenuText-2e3Dry,
/* replace all necessary instances var(--interactive-active) with black (#000) right here */
/* NEW OLD and RELEVANT buttons in search results header */
/* on select */
.searchResultsWrap-5RVOkx>.searchHeader-1r_ZSh .selected-g-kMVV.item-3XjbnG,
.searchResultsWrap-5RVOkx>.searchHeader-1r_ZSh .selected-g-kMVV.item-3XjbnG:hover,
/* on hover */
.searchResultsWrap-5RVOkx>.searchHeader-1r_ZSh .item-3XjbnG:hover,
/* context menu item hover*/
.menu-1QACrS .item-1OdjEX.focused-3qFvc8,
/* selected radioGroupItem */
.item-2idW98[aria-checked=true],
/* jumpToPresentBar (above message box) */
.jumpToPresentBar-1cEnH0:hover>button,
/* show all participants button when joining a voice call, and maybe other buttons as well*/
.button-3Vyz67,
/* highlighted keywords in search results*/
.searchResultsWrap-5RVOkx .highlight,
/* roleEveryoneContainer in server settings */
.container-3EtAkD,
.container-3EtAkD:hover,
/* akaBadge in header */
.container-ZMc96U .akaBadge-3i7V3p,
/* Mentions on hover */
.theme-dark .mentioned-Tre-dv .mention.interactive:hover,
.mention.interactive:hover,
.theme-dark .mention:hover,
/* Auto complete box (on hover & select) */
.autocompleteRowVertical-EA9dCg[aria-selected="true"] .base-2v-uc0 .autocompleteRowIcon-Br97vl svg,
.autocompleteRowVertical-EA9dCg .base-2v-uc0:hover .autocompleteRowIcon-Br97vl svg,
.autocompleteRowVertical-EA9dCg[aria-selected="true"] .base-2v-uc0 .text-xs-normal-3SiVjE > span,
.autocompleteRowVertical-EA9dCg .base-2v-uc0:hover .text-xs-normal-3SiVjE > span,
/* Auto complete selected category icon */
.selected-3B2w1z .icon-1kx1ir,
.selected-3B2w1z:hover .icon-1kx1ir,
/*create channel tag*/
.tag-15zcD_,
/*add server button text*/
.container-x8Y1ix .text-PdAsFQ,
/*search results jump button*/
.searchResultsWrap-5RVOkx .button-cfOvv-,
.searchResultsWrap-5RVOkx .button-cfOvv-:hover,
/*some button thing*/
.theme-dark .selectorButton-3fWZ0_.selectorButtonSelected-3cQUnj:not(.selectorButtonPremiumRequired-IZXhgV) .selectorTextSelected-2zup8I,
/*inbox drop down*/
.theme-dark .header-1w9Q93 .tabBar-1qdMr5 .tab-TRrPC8.active-1grPyy,
.jumpButton-1ITAeq .text-2ifC_x,
.jumpButton-1ITAeq:hover .text-2ifC_x,
.tutorialIcon-25VF3Q,
/*problem info option*/
.option-1O-Hwt,
/*thread icon wrapper*/
.iconWrapper-3plkqh .icon-382itv,
/*flower star container*/
.flowerStarContainer-1QeD-L .childContainer-U_a6Yh>svg,
.container-1NXEtd .container-1-ERn5 .flowerStarContainer-1QeD-L .childContainer-U_a6Yh>svg,
/*thread dropdown body icon*/
.icon-mJhEWn,
.iconBadge-32fMme.participating-2Z81oO .icon-2Ug6UV,
/*popout call text badge*/
.textBadge-1fdDPJ .qualityIndicatorFullQuality-3Onyt5,
.textBadge-1fdDPJ .premiumStreamIcon-1ei2nF,
/*context menu checkbox hover*/
.menu-1QACrS .item-1OdjEX.focused-3qFvc8 .checkbox-hADx5o,
/*SAVE 16%*/
.planOptionDiscount-2nex9n,
/*selected payment otion*/
.option-2eIyOn[aria-selected=true]:not(.option-2eIyOn.multi-1HXDiv) .paymentSourceLabel-1z_EVr,
/*upload content circle*/
.contentCircle-15IFyT .uploadIcon-2zMtOT,
.checkmark-bW9BK8,

.theme-dark .tierPill-l7DvKo,
/*session icons in devices tab*/
.sessionIcon-2fwSzb,
/*not even sure*/
.lookFilled-1H2Jvj.colorGrey-2DXtkV,
.lookFilled-1H2Jvj.colorBrand-2M3O3N,
.lookFilled-1H2Jvj.colorGreen-jIPCAS,
.lookFilled-1H2Jvj.colorBrandNew-abZT3v,
.lookFilled-1H2Jvj.colorPrimary-2-Lusz,
.lookFilled-1H2Jvj.buttonColor-1u-3JF,
/*radio bar text/items upon selection*/
[aria-checked=true].item-1TA5qI .radioBar-1XgZqD
{
  color: #000;
}

/*"Beta" text badge next to certain tabs in settings page*/
[aria-label="User Settings"] [class*="selected-"] [class*="textBadge-"][style*="background-color: var(--brand-500)"]{
  background: #000 !important;
  border: 2px solid #fff;
  padding-bottom: 15px;
}

.theme-dark .tierPill-l7DvKo{
  font-weight: 500;
}

/*verified game icon*/
.gameVerifiedIcon-1YMUdQ .childContainer-U_a6Yh>svg>path{
  fill: #000;
}

/*add server button arrow*/
.container-x8Y1ix .arrow-2yY1Tm,
/* "Don't have an invite?" button arrow*/
.rowContainer-3t7486 .rowArrow-TIwwIc{
  filter: brightness(0) invert(0);
}

/*option bars in hubs??*/
.optionItem-2tdutc.selected-1-Z6gm{
  color: #000;
}
.optionItem-2tdutc.selected-1-Z6gm .layout-1qmrhw .avatar-3VNtDW>svg>path{
  fill: #000;
}

.compactButton-3hG-bs .defaultColor-1EVLSt,
.iconWrapper-3FqQ75 .icon-3gfzEo path,
/* "Don't have an invite?" text */
.rowContainer-3t7486 h3.defaultColor-HXu-5n,
.rowContainer-3t7486 h3+div,
/* Welcome to server option box text*/
.optionContainer-yOpaLq .channelDescription-3n9Tua,
.optionContainer-yOpaLq .text-xs-normal-3SiVjE,
/*send wave sticker text*/
.compactButton-3hG-bs .defaultColor-24IHKz,
/*checked radio bar text*/
[aria-checked=true].item-2idW98 .radioBar-3w9XY- [style*="color: var(--header-secondary)"]{
    filter: invert(1);
}

.emptyChannelIcon-1YdEz2{
  filter: invert(100);
  background-color: var(--main-color-inverted);
  /*hashtag at top of chat box in server channel*/
}

.unicodeShortcut-3N8oDe svg{
  color: rgba(0,0,0,.9);
}

/* More Auto Complete Box (on hover & select) */
.autocompleteRowVertical-EA9dCg[aria-selected="true"] .base-2v-uc0 .text-xs-normal-3SiVjE,
.autocompleteRowVertical-EA9dCg[aria-selected="true"] .base-2v-uc0 .text-md-normal-304U3g,
.autocompleteRowVertical-EA9dCg .base-2v-uc0:hover .text-xs-normal-3SiVjE,
.autocompleteRowVertical-EA9dCg .base-2v-uc0:hover .text-md-normal-304U3g
{
  color: #000 !important;
}
/* Auto complete icon in auto complete row */
.autocompleteRow-14iwvH[aria-selected="true"] .icon-1kx1ir,
.base-2v-uc0:hover .icon-1kx1ir{
  color: #2a2a2a;
}

/* Colored text of red buttons on hover (e.g. Disable Account) */
.lookFilled-yCfaCM.colorRed-rQXKgM:hover,
/* Colored text of selected radio bar */
/* safe direct messaging only */
[aria-checked=true] > .radioBar-3w9XY-[style^="--radio-bar-accent-color:hsl(37, calc(var(--saturation-factor, 1) * 81.2%), 43.9%);"] circle.radioIconForeground-2BMavi,
[aria-checked=true] > .radioBar-3w9XY-[style^="--radio-bar-accent-color:hsl(37, calc(var(--saturation-factor, 1) * 81.2%), 43.9%);"],
/* safe direct messaging + server safety*/
[aria-checked=true] > .radioBar-3w9XY-[style^="--radio-bar-accent-color:hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%);"] circle.radioIconForeground-2BMavi,
[aria-checked=true] > .radioBar-3w9XY-[style^="--radio-bar-accent-color:hsl(139, calc(var(--saturation-factor, 1) * 47.3%), 43.9%);"],
[aria-checked=true] > .radioBar-3w9XY-[style^="--radio-bar-accent-color:hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"] circle.radioIconForeground-2BMavi,
[aria-checked=true] > .radioBar-3w9XY-[style^="--radio-bar-accent-color:hsl(359, calc(var(--saturation-factor, 1) * 82.6%), 59.4%);"]
{
  color:#fff;
}

/* STATUS PICKER */
#account-status-picker.focused-3qFvc8 .mainStatusIcon-25wiNY .status-2DiCMd,
#account-status-picker--online.focused-3qFvc8  .status-2DiCMd,
#account-status-picker--idle.focused-3qFvc8  .status-2DiCMd,
#account-status-picker--dnd.focused-3qFvc8  .status-2DiCMd,
#account-status-picker--invisible.focused-3qFvc8  .status-2DiCMd{
  background: #000 !important;
  /*removes status color upon hover on status picker menu item*/
}

/*-----SERVER BAR-----*/
/* ADD/EXPLORE BUTTON ICONS */
.circleIconButton-1VxDrg:hover{
  color: #000;
}
/*-----MUTE/DEAFEN/USER SETTINGS-----*/
[aria-label="User area"] [aria-label="Set Status"]+div button:hover path{
  fill: #000; /*change depending on theme*/
}
/*-----BD GUILD BUTTON-----*/
#bd-pub-button:hover{
  color: #000;
  /*text color black when hover*/
}
/*-----BD TOASTS-----*/
.bd-toast,
.bd-toast.toast-info,
.bd-toast.toast-success{
    color: #000;
}

